tests/error/template_unknown.gw
// [contains] unknown in template call
 template<{my_type}>
function void my_function() {}

my_function<{unknown_type}>();
